--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@ifyour/deeplx": "^0.1.17",
     "axios": "^1.7.7",
     "fastify": "^5.1.0",
